Fully connected layer loss and grads

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ assignments/assignment1/cs231n/__pycache__/
 assignments/assignment1/cs231n/datasets/cifar-10-batches-py/  
 assignments/assignment1/cs231n/datasets/cifar-10-python.tar.gz
 assignments/assignment1/cs231n/datasets/imagenet_val_25.npz
+assignments/assignment2/cs231/__pychache__/
 
 
 # Compiled source #
